--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@auth/firebase-adapter": "2.7.2",
     "clsx": "^2.1.1",
     "firebase-admin": "^12.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-lottie": "^1.2.10",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4"
   },
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
