--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "2.7.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase-admin": "^12.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-lottie": "^1.2.10",
-    "tailwind-merge": "^3.2.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -31,6 +34,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
 }
