--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.3.0",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-lottie": "^1.2.10",
